# noteker

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  Noteker.spec  README.md  pyproject.toml
.github/workflows/: build.yml
config/: settings.yaml.example
scripts/: build_dmg.sh  entitlements.plist
src/: _entry.py
src/noteker/: __init__.py  main.py  paths.py  pdf_renderer.py  transcriber.py
