[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noteker"
version = "0.1.0"
description = "Handwritten PDF notes → clean markdown via Claude Vision MCP server"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Andras Takacs", email = "at+github@felhasznalo.name" }]
dependencies = [
    "fastmcp>=2.0.0",
    "pymupdf>=1.24.0",
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
]

[project.scripts]
noteker = "noteker.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
noteker = ["resources/*.png"]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
]
